# mps

./: .gitignore  README.md  logs  monitoring  pyproject.toml  requirements_mpsdev.txt  run  run_backtest.py
backtest/: evaluator.py  simulator.py  walk_forward.py
config/: __init__.py  _config.py  _messages.py
core/: bootstrap.py  calendar.py  libs.py  ports.py  types.py
core/config/: __init__.py  _config.py  _key_strings.py  _messages.py
core/libs/: __init__.py  _call_function.py  _dict_dot.py  _libs.py  _logger.py
core/utils/: __init__.py  _call_function.py  _logger.py
data/: loader.py  types.py
data/features/: __init__.py  _dataset.py  _extractor.py  _labeler.py  _normalizer.py  _validator.py  (+2 more)
docs/: component_map.pptx  design-philosophy.ipynb
documents/: design-philosophy.ipynb  keybinding.json
freelibs/: __init__.py  _call_function.py  _dict_dot.py
model/: __init__.py  _trainer.py
models/: factory.py  registry.py  trainer.py
notebooks/: config.ipynb  gpu_check.ipynb  logger.ipynb
observability/: latency.py  logger.py  snapshot.py
pipline/: evaluator.py  simulator.py  walk_forward.py
risk/: cost_model.py  guards.py
run/: backtest.py  train_models.py
scripts/: run_backtest.py  test.py  train_models.py
signal/: latency_guard.py
sys/: __init__.py  config.py
test/: config.ipynb  data_loader.ipynb  feature_extractor.ipynb  label_distribution.ipynb  max_drawdown.ipynb  torch_gpu_test.ipynb  z.cfg.ipynb  z.logs.ipynb
trade/: __init__.py
x.test/: x8.store_loader.ipynb  x9.dict_dot.ipynb  x9.dict_dot.py  x9.messages.ipynb
(+170 files in other folders)
