[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mps"
version = "2.0.0"
description = "Muse Pulse System — KOSPI 단타 자동매매 (Phase-2, 롱 온리)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy", "pandas", "torch", "ta", "pyarrow",
    "mplfinance", "matplotlib", "pykrx",
]

[tool.setuptools.packages.find]
where = ["src/v3"]

[tool.pyright]
include = ["src", "scripts"]